--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   tflite: ^1.1.1
   image_picker: ^0.7.2+1
+  image: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
